[gd_scene load_steps=2 format=3 uid="uid://ecneb3ohf816"]

[ext_resource type="Script" path="res://menus/start_menu.gd" id="1_45sxm"]

[node name="StartMenu" type="CanvasLayer"]
script = ExtResource("1_45sxm")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.5
offset_top = -11.5
offset_right = 63.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.876017, 0.652359, 0.447653, 1)
theme_override_font_sizes/font_size = 60
text = "Snake Unlimited"

[node name="GridContainer" type="GridContainer" parent="Panel/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/v_separation = 10

[node name="BtnSinglePlayer" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Single Player"

[node name="BtnQuit" type="Button" parent="Panel/HBoxContainer/VBoxContainer/GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/BtnSinglePlayer" to="." method="_on_btn_single_player_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/VBoxContainer/GridContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
